# CPGC

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
benches/: corpus.rs
benchmarks/: enwik9_results.csv  make_charts.py  results.csv  run_bench.sh
examples/: probe.rs
experiments/: ablation.py  benchmark.py  model_arch.py  tune_lr.py
installer/: cpgc.iss
src/: bitstream.rs  checksum.rs  codec.rs  gui.rs  lib.rs  main.rs  shell.rs
src/analyzer/: classifier.rs  entropy.rs  magic.rs  mod.rs
src/ans/: decode.rs  encode.rs  mod.rs  table.rs
src/archive/: format.rs  mod.rs  solid.rs
src/cm/: coder.rs  mod.rs  predictor.rs
src/gui/: index.html
src/predictor/: lstm.rs  match_model.rs  mixer.rs  mod.rs  order_n.rs  run_model.rs
src/transform/: fingerprint.rs  mod.rs  primitives.rs  search.rs  textdict.rs
tests/: adversarial.rs  codec_roundtrip.rs  predictor_tests.rs  roundtrip.rs
