[package]
name = "cpgc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# The CLI (`cpgc`) is the default, lean build with no GUI dependencies.
default = []
# Bundle pre-trained weights into the binary.
pretrained = []
# Native desktop GUI binary (`cpgc-gui`). Build with:
#   cargo build --release --features gui
gui = ["dep:eframe"]

# Two separate binaries so the CLI can be downloaded on its own without the
# GUI's heavy windowing dependencies.
[[bin]]
name = "cpgc"
path = "src/main.rs"

[[bin]]
name = "cpgc-gui"
path = "src/bin/cpgc-gui.rs"
required-features = ["gui"]

[dependencies]
rayon = "1.8"
bitvec = "1.0"
dashmap = "5.5"
wide = "0.7"
ndarray = "0.15"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.3"
walkdir = "2.4"
memmap2 = "0.9"
eframe = { version = "0.27", optional = true, default-features = false, features = ["glow", "default_fonts"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "corpus"
harness = false
