[package]
name = "cpgc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["gui"]
# Bundle pre-trained weights into the binary.
# Place weights at src/predictor/pretrained.bin then:
#   cargo build --release --features pretrained
pretrained = []
# Native desktop GUI (`cpgc gui`). Enabled by default; build the lean
# CLI-only binary with `cargo build --release --no-default-features`.
gui = ["dep:eframe"]

[dependencies]
rayon = "1.8"
bitvec = "1.0"
dashmap = "5.5"
wide = "0.7"
ndarray = "0.15"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.3"
walkdir = "2.4"
memmap2 = "0.9"
eframe = { version = "0.27", optional = true, default-features = false, features = ["glow", "default_fonts"] }

# Windows-only: write the right-click shell-integration registry entries
# (under HKCU, so `cpgc register` needs no administrator rights).
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "corpus"
harness = false
